Updated logic and pages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.44.1", features = ["full"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tracing = "0.1.41"
 utoipa = { version = "5.3.1", features = ["axum_extras"] }
+serde_json = "1.0.140"
+chrono = "0.4.40"
